# OmniDirector

./: .gitignore  CPI-Standardization.md  CPIs.md  Cargo.toml  Dockerfile
.github/workflows/: wiki.yml
CPIs/: _cpi-template.json  cpi-alibaba.json  cpi-atlantic.json  cpi-aws-ec2-api.json  cpi-aws-ec2.json  cpi-aws-lightsale.json  cpi-aws.json  cpi-azure-api.json  cpi-azure.json  cpi-bhyve.json  cpi-buyvm.json  cpi-contabo.json  cpi-detee.json  cpi-digital-ocean.json  cpi-digitalocean.json  cpi-dummy.json  cpi-equinix-metal.json  cpi-equinix.json  cpi-exoscale.json  cpi-gcp-api.json  cpi-gcp.json  cpi-hetzner.json  cpi-huawei.json  cpi-hyperv.json  cpi-ibm.json  cpi-kamatera.json  cpi-kvm.json  cpi-linode.json  cpi-lxd.json  cpi-openstack.json  cpi-oracle-cloud.json  cpi-oracle.json  cpi-ovh-cloud.json  cpi-ovh.json  cpi-proxmox.json  cpi-qemu.json  cpi-rackspace.json  cpi-scaleway.json  cpi-std-kvm.json  cpi-tencent.json  (+13 more)
features/: vm_manage.json
src/: api.rs  cpi_actions.rs  gen_dockerfile.rs  lib.rs  logging.rs  main.rs  proposal.rs  tests.rs
src/api/: index.rs  mod.rs
src/api/handlers/: users.rs
src/api/models/: user.rs
src/api/routes/: health.rs  mod.rs  users.rs
src/backends/: docker.rs  mod.rs  openstack.rs
src/cpi_actions/: actions.rs  commands.rs  mod.rs  models.rs  output.glue  parser.rs  parsers.rs  prelude.rs  types.rs  utils.rs
src/cpi_actions_old/: commands.rs  parsers.rs
src/cpis/: arguments.rs  context.rs  error.rs  events.rs  executor.rs  extensions.rs  features.rs  loader.rs  logger.rs  mod.rs  output.glue  parser.rs  plugin.rs  prelude.rs  provider.rs  registry.rs  validator.rs
src/cpis_old/: README.md  loader.rs  parser.rs  provider.rs  validator.rs
src/interfaces/agent/: mod.rs
tests/: exec_interactive.bat  parse_output.py
tests/cpis/: vm_exec.bat  vm_exec.sh  vm_request.json
