[package]
name = "omni-director"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
colored = "2.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tempfile = "3.14.0"
tokio = { version = "1.41.1", features = ["macros", "parking_lot", "rt", "rt-multi-thread"] }
chrono = "0.4.38"
debug_print = "1.0.0"
ez_logging = "0.1.4"
rocket = { version = "0.5.1", features = ["json"] }
libomni = "0.1.0"
reqwest = "0.12.9"
regex = "1.11.1"
lazy_static = "1.5.0"
thiserror = "2.0.12"
log = "0.4.26"
once_cell = "1.21.1"
dashmap = "6.1.0"
rayon = "1.10.0"
run_script = "0.11.0"

[profile.dev]
codegen-units = 32
incremental = true
debug-assertions = false
overflow-checks = false
opt-level = 0
lto = "thin"
