[package]
name = "omni-director"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["macros", "parking_lot", "rt", "rt-multi-thread"] }
chrono = "0.4.40"
debug_print = "1.0.0"
ez_logging = "0.1.4"
rocket = { version = "0.5.1", features = ["json"] }
libomni = "0.2.3"
reqwest = { version = "0.12.15", features = ["blocking"] }
regex = "1.11.1"
lazy_static = "1.5.0"
thiserror = "2.0.12"
log = "0.4.26"
once_cell = "1.21.1"
dashmap = "6.1.0"
rayon = "1.10.0"
run_script = "0.11.0"
indicatif = "0.17.11"
ssh2 = { version = "0.9.0" }
libloading = "0.8.6"
lib_cpi = "0.1.0"
dirs = "6.0.0"
comfy-table = "7.1.4"
env_logger = "0.11.8"

[profile.dev]
codegen-units = 32
incremental = true
debug-assertions = false
overflow-checks = false
opt-level = 0
lto = "thin"
