[package]
name = "omni-director"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
colored = "3.0.0"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["macros", "parking_lot", "rt", "rt-multi-thread", "process"] }
chrono = "0.4.41"
debug_print = "1.0.0"
ez_logging = "0.1.4"
rocket = { version = "0.5.1", features = ["json"] }
libomni = { path = "../LibOmni" }
reqwest = { version = "0.12.18", features = ["blocking"] }
regex = "1.11.1"
lazy_static = "1.5.0"
thiserror = "2.0.12"
log = "0.4.27"
once_cell = "1.21.3"
dashmap = "6.1.0"
rayon = "1.10.0"
run_script = "0.11.0"
indicatif = "0.17.11"
ssh2 = { version = "0.9.5" }
libloading = { version = "0.8.8" }
lib_cpi = "0.5.0"
dirs = "6.0.0"
async-trait = "0.1.88"
warp = "0.3.7"
uuid = "1.4.0"
tracing = "0.1.41"
futures = "0.3.30"

[profile.dev]
codegen-units = 32
incremental = true
debug-assertions = false
overflow-checks = false
opt-level = 0
lto = "thin"
